// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs.Item adds activeClassName={SELECTED_CLASS} when it gets a "to" prop 1`] = `
.c0 {
  color: #0969da;
  display: inline-block;
  font-size: 14px;
  -webkit-text-decoration: var(--prefers-link-underlines,underline);
  text-decoration: var(--prefers-link-underlines,underline);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.selected {
  color: #1F2328;
  pointer-events: none;
}

<div
  activeClassName="selected"
  aria-current={null}
  className="c0"
  to="#"
/>
`;

exports[`Breadcrumbs.Item renders consistently 1`] = `
.c0 {
  color: #0969da;
  display: inline-block;
  font-size: 14px;
  -webkit-text-decoration: var(--prefers-link-underlines,underline);
  text-decoration: var(--prefers-link-underlines,underline);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.selected {
  color: #1F2328;
  pointer-events: none;
}

<a
  aria-current={null}
  className="c0"
/>
`;

exports[`Breadcrumbs.Item respects the "selected" prop 1`] = `
.c0 {
  color: #0969da;
  display: inline-block;
  font-size: 14px;
  -webkit-text-decoration: var(--prefers-link-underlines,underline);
  text-decoration: var(--prefers-link-underlines,underline);
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0.selected {
  color: #1F2328;
  pointer-events: none;
}

<a
  aria-current="page"
  className="c0 selected"
  selected={true}
/>
`;
